--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
           <th> Names </th>
         </tr>
         {{range .}}<tr>
-        <td>{{.}}</td>
+        <td><a href="fetch/{{.}}">{{.}}</a></td>
         </tr> {{end}}
     </body>
 </html>
