Made it reindex the movies directory every time a client connects to the main page. Also removed the content-type misdirection.

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
           <th> Names </th>
         </tr>
         {{range .}}<tr>
-        <td><a href="fetch/{{.}}">{{.}}</a></td>
+        <td><a href="fetch/{{.}}" target="_blank">{{.}}</a></td>
         </tr> {{end}}
     </body>
 </html>
