Hooked up the IP address verification to MySQL. Fixed the heartbeat pollers to shutdown properly.

--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -1,6 +1,6 @@
 @gentle-white: #FFFFFA;
 body {
-    background-color: @gentle-white;
+    background-color: @gentle-white !important;
 }
 
 .container {
