--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -23,9 +23,10 @@ body {
     padding-bottom:10px;
 }
 
-th {
+.centered {
     text-align:center;
 }
+
 form.download-button {
     display: inline-block;
 }
