--- a/static/stylesheets/styles.less
+++ b/static/stylesheets/styles.less
@@ -5,33 +5,38 @@ Licensed under the Apache License, Version 2.0 (the "License"); you may not use
 this file except in compliance with the License.  You may obtain a copy of the
 License at
 
-http://www.apache.org/licenses/LICENSE-2.0
+    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software distributed
 under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 CONDITIONS OF ANY KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations under the License.
- */
+*/
 
-requirejs.config({
-  paths: {
-    'jquery':        'libs/jquery',
-    'underscore':    'libs/underscore',
-    'backbone':      'libs/backbone',
-    'text':          'libs/text/text'
-  },
+@import "bootstrap.css";
+@import "backgrid.css";
+@import "backgrid-paginator.css";
+@import "backgrid-filter.css";
 
-  shim: {
-    'jquery': { exports: '$' },
-    'underscore': { exports: '_' },
 
-    'backbone': {
-      deps: ['jquery', 'underscore'],
-      exports: 'Backbone'
-    }
-  }
-});
+body {
+    @gentle-white: #FFFFFA;
+    background-color: @gentle-white !important;
+}
 
-requirejs(['app'], function(App) {
-  App.initialize();
-});
+.container {
+    padding-left:30px;
+    padding-top:10px;
+    padding-bottom:10px;
+}
+
+.centered {
+    text-align:center;
+}
+
+#refreshSpan {
+    padding-top:0px;
+    padding-bottom:0px;
+    border: 0px;
+    background-color: transparent;
+}
