Fixed issues with logging in.

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 		</title>
 	</head>
 <body>
-	<form id='login' action='checkAccess' method='post'>
+	<form id='login' action='checkAccess/' method='post'>
 		<fieldset >
 
 
