--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -41,6 +41,10 @@ specific language governing permissions and limitations under the License.
         <div id="tableBox" class="col-12">
         </div>
       </div>
+      <div class="row">
+        <div id="paginatorBox" class="col-12 text-center">
+        </div>
+      </div>
     </div>
   </body>
 </html>
