--- a/static/stylesheets/styles.less
+++ b/static/stylesheets/styles.less
@@ -15,7 +15,7 @@ specific language governing permissions and limitations under the License.
 
 @import "bootstrap.css";
 @import "backgrid.css";
-@import "backgrid-paginator.css";
+@import "backgrid-paginator-custom.css";
 @import "backgrid-filter.css";
 
 
