Added a testing framework for the server.
It's in python, and uses pytest, with the Requests and MySQLdb
packages. I also refactored a couple small things, and changed the
'static' directory to 'frontend'.

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -19,10 +19,10 @@ specific language governing permissions and limitations under the License.
 
     <!-- CSS -->
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link href="static/stylesheets/styles.css" rel="stylesheet" />
+    <link href="frontend/stylesheets/styles.css" rel="stylesheet" />
 
     <!-- RequireJS -->
-    <script data-main="static/js/startup" src="static/js/libs/require.js"></script>
+    <script data-main="frontend/js/startup" src="frontend/js/libs/require.js"></script>
 
     <title>
       Movie Server
