--- a/frontend/stylesheets/styles.less
+++ b/frontend/stylesheets/styles.less
@@ -40,3 +40,7 @@ body {
     border: 0px;
     background-color: transparent;
 }
+
+#no-data-alert, #no-connection-alert, #no-keys-alert {
+    display:none;
+}
